fixed below or behind header feature, playlist feature still doesn't work

--- a/assets/sass/components/header/_video-bg.scss
+++ b/assets/sass/components/header/_video-bg.scss
@@ -1,10 +1,10 @@
 .video-background {
   background: #000;
   position: fixed;
-  top: -20px;
+  //top: -20px;
   right: 0;
   left: 0;
-  bottom: -20px;
+  //bottom: -20px;
   z-index: -99;
 }
 
